--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
       format("truetype"),
     url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold")
       format("svg");
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -45,9 +45,6 @@ body {
   font-family: "proxima_nova_rgregular", Helvetica, Arial, sans-serif;
   padding: 0px;
   margin: 0px;
-}
-.hi {
-  border: 1px solid blue;
 }
 
 /* Navbar Section */
@@ -127,7 +124,7 @@ body {
   font-weight: bold;
 }
 .banner-content h1 {
-  font-size: 55px;
+  font-size: 100px;
   text-transform: uppercase;
   color: #f6f5f5;
   font-weight: bold;
@@ -464,6 +461,10 @@ body {
 /* Testimonials */
 .testimonial-wrapper {
   margin-bottom: 40px;
+  background-image: url(./src/heart-bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 .testimonial-heading {
   text-align: center;
@@ -532,7 +533,7 @@ body {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  margin: 0 10px;
+  margin: 0 5px;
 }
 .carousel-indicators .active {
   background-color: #fb7e32;
@@ -544,6 +545,9 @@ body {
   position: absolute;
   top: 45px;
   right: 10px;
+  background-image: url(./src/next.png) !important;
+  background-size: auto;
+  background-position: center;
 }
 .carousel-control-prev-icon {
   border: 1px solid #fb7e32;
@@ -553,6 +557,9 @@ body {
   position: absolute;
   top: 45px;
   left: 10px;
+  background-image: url(./src/previous.png) !important;
+  background-size: auto;
+  background-position: center;
 }
 
 /* Doctor Patient Section */
@@ -610,7 +617,7 @@ body {
 .icon-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   margin-top: 40px;
 }
@@ -635,7 +642,7 @@ body {
 }
 .line {
   border-bottom: 1px solid #484648;
-  margin: 40px 0px 80px 0px;
+  margin: 40px 0px;
 }
 .social-icon-wrapper {
   margin-bottom: 20px;
@@ -692,6 +699,11 @@ body {
   font-size: 13px;
   color: #ffffff;
   font-weight: 300;
+  margin: 0;
+}
+
+.footer-links-wrapper {
+  padding-bottom: 40px;
 }
 
 @media (max-width: 991px) {
