--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ body {
   min-height: 300px;
   position: absolute;
   top: 50px;
+  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
 }
 .banner-card-img {
   height: 100px;
@@ -707,6 +708,11 @@ body {
 }
 
 @media (max-width: 991px) {
+  .call-us,
+  .appointment {
+    display: none;
+  }
+
   .nav-link1 {
     font-size: 15px;
   }
@@ -747,6 +753,7 @@ body {
   }
   .banner-wrapper {
     margin-bottom: 40px;
+    background-size: contain;
   }
   .contact-btn button {
     padding: 10px 50px;
