--- a/style.css
+++ b/style.css
@@ -177,7 +177,6 @@ body {
   min-height: 300px;
   position: absolute;
   top: 50px;
-  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
 }
 .banner-card-img {
   height: 100px;
@@ -364,10 +363,10 @@ body {
   margin-bottom: 40px;
 }
 .map-wrapper {
-  background-image: url("./src/26.png");
+  /* background-image: url("./src/26.png");
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: 100%; */
 }
 .location-wrapper {
   width: 50%;
@@ -462,10 +461,6 @@ body {
 /* Testimonials */
 .testimonial-wrapper {
   margin-bottom: 40px;
-  background-image: url(./src/heart-bg.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
 }
 .testimonial-heading {
   text-align: center;
@@ -534,7 +529,7 @@ body {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  margin: 0 5px;
+  margin: 0 10px;
 }
 .carousel-indicators .active {
   background-color: #fb7e32;
@@ -546,9 +541,6 @@ body {
   position: absolute;
   top: 45px;
   right: 10px;
-  background-image: url(./src/next.png) !important;
-  background-size: auto;
-  background-position: center;
 }
 .carousel-control-prev-icon {
   border: 1px solid #fb7e32;
@@ -558,9 +550,6 @@ body {
   position: absolute;
   top: 45px;
   left: 10px;
-  background-image: url(./src/previous.png) !important;
-  background-size: auto;
-  background-position: center;
 }
 
 /* Doctor Patient Section */
@@ -618,7 +607,7 @@ body {
 .icon-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   margin-top: 40px;
 }
@@ -643,7 +632,7 @@ body {
 }
 .line {
   border-bottom: 1px solid #484648;
-  margin: 40px 0px;
+  margin: 40px 0px 80px 0px;
 }
 .social-icon-wrapper {
   margin-bottom: 20px;
@@ -700,19 +689,9 @@ body {
   font-size: 13px;
   color: #ffffff;
   font-weight: 300;
-  margin: 0;
-}
-
-.footer-links-wrapper {
-  padding-bottom: 40px;
 }
 
 @media (max-width: 991px) {
-  .call-us,
-  .appointment {
-    display: none;
-  }
-
   .nav-link1 {
     font-size: 15px;
   }
@@ -753,7 +732,6 @@ body {
   }
   .banner-wrapper {
     margin-bottom: 40px;
-    background-size: contain;
   }
   .contact-btn button {
     padding: 10px 50px;
