--- a/style.css
+++ b/style.css
@@ -104,16 +104,31 @@ body {
 }
 
 /* Banner Section */
+
+.banner-section-main-wrapper {
+  position: relative;
+}
+
 .banner-wrapper {
   background-image: url("./src/5.png");
   min-height: 680px;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 200px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  background-position: center bottom;
 }
+
+.section-three-boxes {
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  right: 0;
+}
+
+.banner-main-wrapper {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .banner-content {
   text-align: center;
 }
@@ -135,7 +150,6 @@ body {
 }
 .banner-btn {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
 }
 .help-btn {
@@ -148,9 +162,9 @@ body {
   border: none;
   padding: 12px 70px;
 }
-.help-btn button a,
-.about-btn button a,
-.contact-btn button a {
+.help-btn button,
+.about-btn button,
+.contact-btn button {
   text-decoration: none;
   font-size: 15px;
   text-transform: uppercase;
@@ -162,6 +176,7 @@ body {
   background-color: transparent;
   border: 2px solid #ebebeb;
   padding: 10px 22px;
+  color: #ffffff;
 }
 .patient-btn button a {
   text-decoration: none;
@@ -170,14 +185,13 @@ body {
   color: #ffffff;
   font-weight: bold;
 }
+
 .banner-card-wrapper {
   background-color: #ffffff;
   border: 1px solid #e6e6e6;
   padding: 20px;
-  min-height: 300px;
-  position: absolute;
-  top: 50px;
   filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
+  min-height: 310px;
 }
 .banner-card-img {
   height: 100px;
@@ -196,10 +210,12 @@ body {
   font-size: 13px;
   color: #070707;
   padding-top: 10px;
+  margin: 0;
 }
 /* Welcome to Magdalene Clinic */
 .magdalene-clinic-wrapper {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+  margin-top: 250px;
 }
 .about-btn button {
   border-radius: 33px;
@@ -765,6 +781,9 @@ body {
 }
 
 @media (max-width: 1199px) {
+  .section-three-boxes {
+    bottom: -100px;
+  }
   .mobile-menu .call-us {
     border: none;
   }
@@ -812,27 +831,10 @@ body {
     justify-content: space-between;
   }
   .banner-content h6 {
-    font-size: 12px;
     padding-top: 20px;
   }
   .banner-content h1 {
-    font-size: 30px;
-  }
-  .banner-content p {
-    font-size: 12px;
-  }
-  .banner-card-wrapper {
-    position: static !important;
-  }
-  .patient-btn {
-    margin-bottom: 20px;
-  }
-  .about-btn {
-    margin-bottom: 10px;
-  }
-  .banner-wrapper {
-    margin-bottom: 40px;
-    background-size: contain;
+    font-size: 70px;
   }
   .contact-btn button {
     padding: 10px 50px;
@@ -861,9 +863,6 @@ body {
     position: static;
     width: 100%;
   }
-  .help-btn {
-    margin: 0px 0px 10px 0px;
-  }
 
   .service-heading {
     text-align: left;
@@ -887,20 +886,22 @@ body {
     line-height: 15px;
     margin-bottom: 20px;
   }
-  .testimonial-content-wrapper {
-    text-align: left !important;
+}
+
+@media (max-width: 991px) {
+  .section-three-boxes {
+    position: static;
   }
-  .testimonial-content-wrapper {
-    padding: 15px 35px;
+
+  .banner-card-wrapper {
+    margin-top: 50px;
   }
-  .carousel-control-next-icon {
-    padding: 5px;
-    top: 50px;
-    left: 0px;
+
+  .magdalene-clinic-wrapper {
+    margin-top: 50px;
   }
-  .carousel-control-prev-icon {
-    padding: 5px;
-    top: 50px;
-    right: 0px;
+
+  .about-btn button {
+    margin-bottom: 10px;
   }
 }
